templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: lab-app
spec:
  selector:
    app: flask-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  service:
    type: ClusterIP
    port: 80
    targetPort: 5000
